--- a/templates/resources/basic.html
+++ b/templates/resources/basic.html
@@ -33,8 +33,17 @@
 
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
-  {% block style %}{% endblock style %}
+  
   <style>
+  {% block style %}{% endblock style %}
+  .feadback-btn{
+    background-color: #8960eb57;
+   }
+   .feadback-btn:hover{
+    background-color:#8a60eb98 ;
+    cursor: pointer;
+    border: none;
+   }
    .signin{
     filter: blur(20px);
     pointer-events: none;
@@ -362,35 +371,27 @@ img.avatar{
             </div>
 
             <div class="col-lg-6">
-              <form action="forms/contact.php" method="post" class="php-email-form">
-                <div class="row gy-4">
-  
-                  <div class="col-md-6">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-                  </div>
-  
-                  <div class="col-md-6 ">
-                    <input type="email" class="form-control" name="email" placeholder="Your Email" required>
-                  </div>
-  
-                  <div class="col-md-12">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject" required>
-                  </div>
-  
-                  <div class="col-md-12">
-                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
-                  </div>
-  
-                  <div class="col-md-12 text-center">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-  
-                    <button type="submit">Send Message</button>
-                  </div>
-  
+              <!-- feadback form -->
+            <form method="POST">
+              {% csrf_token %}
+              <div class="row gy-4">
+                <div class="col-md-6">
+                  <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
                 </div>
-              </form>
+                <div class="col-md-6 ">
+                  <input type="email" id="email" class="form-control" name="email" placeholder="Your Email" required>
+                </div>
+                <div class="col-md-12">
+                  <input type="text" id="subject" class="form-control" name="subject" placeholder="Subject" required>
+                </div>
+                <div class="col-md-12">
+                  <textarea class="form-control" id="message" name="message" placeholder="Leave a message" "></textarea>                </div>
+
+                  <button type="submit" class="btn feadback-btn" value="OK">Post </button>
+                </div>
+
+              </div>
+            </form>
   
             </div>
           </div>
