--- a/templates/code_busters/index.html
+++ b/templates/code_busters/index.html
@@ -165,7 +165,7 @@ img.avatar{
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="{% static 'assets/img/logo.png' %}" alt="">
-        <span></span>
+        <span>CODE BUSTER</span>
       </a>
 
       <nav id="navbar" class="navbar">
